--- a/frontend/src/components/Sidebar.scss
+++ b/frontend/src/components/Sidebar.scss
@@ -39,6 +39,11 @@
   ul {
     li {
       font-size: 2rem;
+      a {
+        color: #fff;
+        font-size: 2rem;
+        text-decoration: none;
+      }
     }
 
     p {
